Teste de implementação de interface (INCOMPLETO)

--- a/WebContent/combustivel/add-fuel.html
+++ b/WebContent/combustivel/add-fuel.html
@@ -2,9 +2,11 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Manager Fuel</title>
+<link rel="stylesheet" type="text/css" href="estilo2.css" />
 </head>
 <body>
+<br>
 	<h1>Adds Fuel</h1>
 	<hr />
 	<form action="addFuel">
