--- a/WebContent/combustivel/controle-consumo.xhtml
+++ b/WebContent/combustivel/controle-consumo.xhtml
@@ -3,6 +3,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html">
+	<link rel="stylesheet" type="text/css" href="estilo2.css" />
 
 	<ui:define name="corpo-pagina">
 		<h1>Combustível</h1>
@@ -15,7 +16,10 @@
 		motor antes da partida, isto apenas consome combustível. Alberto Araújo
 		conta que a maioria das motos atuais possuem injeção direta, que permite o
 		aquecimento dos motores em movimento sem desperdício ou desgastes.
+		
+		
+	<li class="dropdown"><a href="content.html" class="droptbn">Add Supply</a></li>
 	
 	</ui:define>
-
+	
 </ui:composition>
