Correção no estilo do layout da página html(INCOMPLETO)

--- a/WebContent/imaginartes/fantasma-home.html
+++ b/WebContent/imaginartes/fantasma-home.html
@@ -18,21 +18,23 @@
 				<a href="fantasma-home.html">Planta Fantasma</a>
 			</div></li>
 
-		<li><a href="teacher.html">Cuidados e <br>ambientes	ideais</a></li>
+		<li><a href="teacher.html">Cuidados e <br>ambientes
+					ideais </a></li>
 
-		<li><a href="exam.html">Durabilidade<br> e floração	</a></li>
+		<li><a href="exam.html">Durabilidade<br> e floração </a></li>
 
 		<li><a href="work.html">Pragas</a></li>
 
-		<li><a href="review.html">Escolha <br>da planta	</a></li>
+		<li><a href="review.html">Escolha <br>da planta </a></li>
 
 		<li style="float: right"><a href="about.html">About</a></li>
 	</ul>
 	<header>
-		<h2>IMAGINARTE</h2>
-		Uma expressão de vida!
-	</header>
-	<img src="../img/pf002.jpg" alt="Imaginarte-Planta Fantasma"">
+	<h2>IMAGINARTE</h2>
+	Uma expressão de vida! </header>
+	<section> <nav> <img src="../img/pf002.jpg"
+		alt="Imaginarte-Planta Fantasma" height="450" width="550" align="left"></nav>
+	</section>
 
 </body>
 </html>
