Posicionamento de imagens e layout

--- a/WebContent/imaginartes/fantasma-home.html
+++ b/WebContent/imaginartes/fantasma-home.html
@@ -30,10 +30,16 @@
 		<li style="float: right"><a href="about.html">About</a></li>
 	</ul>
 	<header>
-	<h2>IMAGINARTE</h2>
-	Uma expressão de vida! </header>
-	<section> <nav> <img src="../img/pf002.jpg"
-		alt="Imaginarte-Planta Fantasma" height="450" width="550" align="left"></nav>
+		<h2>IMAGINARTE</h2>
+		Uma expressão de vida! 
+	</header>
+	<section> 
+		<nav>
+		<ol>
+			<img src="../img/pf002.jpg"alt="Imaginarte-Planta Fantasma" height="450" width="550" align="left">
+			
+		</ol>
+		</nav>
 	</section>
 
 </body>
