Elementos de citação e referência

--- a/WebContent/w3school/index.html
+++ b/WebContent/w3school/index.html
@@ -20,6 +20,7 @@
       <li><a href="horizontal_rules.html">HTML Horizontal Rules</a></li>
       <li><a href="background_color.html">Background Color</a></li>
       <li><a href="text_formatting.html">HTML Text Formatting</a></li>
+      <li><a href="quotation.html"> HTML Quotation and Citation Elements</a></li>
     </ul>
 
   </body>
