Uso de cores em atributos da tag style

--- a/WebContent/w3school/index.html
+++ b/WebContent/w3school/index.html
@@ -21,6 +21,8 @@
       <li><a href="background_color.html">Background Color</a></li>
       <li><a href="text_formatting.html">HTML Text Formatting</a></li>
       <li><a href="quotation.html"> HTML Quotation and Citation Elements</a></li>
+      <li><a href="comments.html">Comments</a></li>
+      <li><a href="colors.html">Colors</a></li>
     </ul>
 
   </body>
