--- a/WebContent/w3school/index.html
+++ b/WebContent/w3school/index.html
@@ -23,6 +23,8 @@
       <li><a href="quotation.html"> HTML Quotation and Citation Elements</a></li>
       <li><a href="comments.html">Comments</a></li>
       <li><a href="colors.html">Colors</a></li>
+      <hr>
+      <li><a href="learning_list.html">Conteúdo de Aprendizado</a></li>
     </ul>
 
   </body>
