--- a/WebContent/w3school/colors.html
+++ b/WebContent/w3school/colors.html
@@ -32,10 +32,20 @@
   <h1 style="background-color:LightGray;">LightGray</h1>
   <hr>
 
+  <h1>Background Color</h1>
+  <p>You can set the background color for HTML elements:</p>
+
   <h1 style="background-color:DodgerBlue;" align="center;">Hello World</h1>
 
   <p style="background-color:Tomato;">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
     Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+  <hr>
+
+  <h3 style="color:Tomato;">Text Color</h3>
+
+  <p style="color:Navy;">Lorem ipsum dolor sit amet, consecteteur adpiscing elit, sed diam onnummy nigh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+
+  <p style="color:SeaGreen;">Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea comodo consequat.</p>
 
   </body>
 </html>
