--- a/WebContent/w3school/colors.html
+++ b/WebContent/w3school/colors.html
@@ -46,6 +46,29 @@
   <p style="color:Navy;">Lorem ipsum dolor sit amet, consecteteur adpiscing elit, sed diam onnummy nigh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
 
   <p style="color:SeaGreen;">Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea comodo consequat.</p>
+  <hr>
+
+  <h1 style="border: 2px solid Tomato;">HTML Color Tomato</h1>
+
+  <h1 style="border: 2px solid DodgerBlue;">HTML Color DodgerBlue</h1>
+
+  <h1 style="border: 2px solid Violet;">HTML Color Violet</h1>
+  <hr>
+
+  <p>Same as color name "Tomato":</p>
+
+  <h1 style="background-color:rgb(255,99,71);">rgb(255,99,71)</h1>
+  <h1 style="background-color:#ff6347;">#ff6347</h1>
+  <h1 style="background-color:hsl(9,100%, 64%);">hsl(9,100%, 64%)</h1>
+
+  <p>Same as color name "Tomato", but 50% transparent:</p>
+  <h1 style="background-color:rgba(255,99,71,0.5);">rgba(255,99,71,0.5)</h1>
+  <h1 style="background-color:hsla(9,100%,64%,0.5);">hsla(9,100%,64%,0.5)</h1>
+
+  <p>In addition to the predefined color names, colors can be specified using RGB, HEX, HSL, or even transparent colors using RGBA or HSLA color values.</p>
+
+  <hr>
 
   </body>
+
 </html>
