--- a/WebContent/w3school/colors.html
+++ b/WebContent/w3school/colors.html
@@ -66,9 +66,23 @@
   <h1 style="background-color:hsla(9,100%,64%,0.5);">hsla(9,100%,64%,0.5)</h1>
 
   <p>In addition to the predefined color names, colors can be specified using RGB, HEX, HSL, or even transparent colors using RGBA or HSLA color values.</p>
-
   <hr>
 
+  <h1> RGB Values</h1>
+
+  <p>Each parameter (red, green and blue) defines the intensity of the clor between 0 and 255.</p>
+  <p>rgb(red, gree, blue)</p>
+
+  <p>To display black, set all color parameter to 0, like this: rgb(0,0,0).</p>
+  <p>To display white, set all color parameter to 255, like this: rgb(255, 255, 255).</p>
+
+  <h1 style="background-color:rgb(255,0,0);">rgb(255,0,0)</h1>
+  <h1 style="background-color:rgb(0,0,255);">rgb(0,0,255)</h1>
+  <h1 style="background-color:rgb(60,179,13);">rgb(60,179,13)</h1>
+  <h1 style="background-color:rgb(238,130,238);">rgb(238,130,238)</h1>
+  <h1 style="background-color:rgb(255,165,0);">rgb(255,165,0)</h1>
+  <h1 style="background-color:rgb(106,90,205);">rgb(106,90,205)</h1>
+  <hr>
   </body>
 
 </html>
