Exemplos no uso de tag de cores
Atribuição de especificação de valores hexadecimal e Saturação para 
aplicar diversas cores e tonalidades de cinza.

--- a/WebContent/w3school/colors.html
+++ b/WebContent/w3school/colors.html
@@ -13,7 +13,7 @@
       }
     </style>
   </head>
-  <body style="Background-color:gray;">
+  <body style="Background-color:LightGray;">
 
     <img src="w3schools.png" alt="W3Schools.com" wdth="104" height="142">
     <a href="index.html">Página Principal</a>
@@ -82,7 +82,46 @@
   <h1 style="background-color:rgb(238,130,238);">rgb(238,130,238)</h1>
   <h1 style="background-color:rgb(255,165,0);">rgb(255,165,0)</h1>
   <h1 style="background-color:rgb(106,90,205);">rgb(106,90,205)</h1>
+
+  <p>Shades of gray are often defined using equal values for all the 3 light sources:</p>
+
+  <h3>Examples</h3>
+  <h1 style="background-color:rgb(0,0,0);">rgb(0,0,0)</h1>
+  <h1 style="backgroung-color:rgb(60,60,60);">rgb(60,60,60)</h1>
+  <h1 style="background-color:rgb(120,120,120);">rgb(120,120,120)</h1>
+  <h1 style="background-color:rgb(180,180,180);">rgb(180,180,180)</h1>
+  <h1 style="backgournd-color:rgb(240,240,240);">rgb(240,240,240)</h1>
+  <h1 style="background-color:rgb(255,255,255);">rgb(255,255,255)</h1>
+
   <hr>
+
+  <h1>HEX Value</h1>
+  <p>In HTML, a color can be specified using a hexadecimal value in the form:</p>
+  <p align="center"><b >#rrggbb</b></p>
+  <p>Where <b style="background-color:#ff0000;">rr (red)</b>,<b style="background-color:#3cb371;"> gg (gree)</b> and <b style="background-color:#0000ff;">bb (blue)</b> are hexadecimal values between OO and ff (same as decimal O-255).</p>
+
+  <h1 style="background-color:#ff0000;">#ff0000</h1>
+  <h1 style="background-color:#0000ff;">#0000ff</h1>
+  <h1 style="background-color:#3cb371;">#3cb371</h1>
+  <h1 style="background-color:#ee82ee;">#ee82ee</h1>
+  <h1 style="background-color:#ffa500;">#ffa500</h1>
+  <h1 style="background-color:#6a5acd;">#6a5acd</h1>
+  <hr>
+
+  <h3>Saturation</h3>
+  <p>Saturantion can be described as the intensity of a color.</p>
+  <p>100% is pure color, no shades of gray.</p>
+  <p>50% is 50% gray, but you can still see the color.</p>
+  <p>0% is completely gray, you can no longer see the color.</p>
+
+  <h3>Examples</h3>
+  <h1 style="background-color:hsl:hsl(0,100%, 50%);">hsl(0,100%, 50%)</h1>
+  <h1 style="background-color:hsl(0,80%, 50%);">hsl(0,80%,50%)</h1>
+  <h1 style="background-color:hsl(0,60%,50%);">hsl(0,60%,50%)</h1>
+  <h1 style="background-color:hsl(0,40%,50%);">hsl(0,40%,50%)</h1>
+  <h1 style="background-color:hsl(0,20%,50%);">hsl(0,20%,50%)</h1>
+  <h1 style="background-color:hsl(0,0%,50%);">hsl(0,0%,50%)</h1>
+  
   </body>
 
 </html>
