--- a/WebContent/w3school/colors.html
+++ b/WebContent/w3school/colors.html
@@ -6,7 +6,7 @@
     <style>
       h3 {
         text-align:center;
-        color:LightGreen;
+        color:SeaGreen;
       }
       a {
         color:green;
@@ -121,7 +121,31 @@
   <h1 style="background-color:hsl(0,40%,50%);">hsl(0,40%,50%)</h1>
   <h1 style="background-color:hsl(0,20%,50%);">hsl(0,20%,50%)</h1>
   <h1 style="background-color:hsl(0,0%,50%);">hsl(0,0%,50%)</h1>
-  
+  <hr>
+
+  <h3>Ligthness</h3>
+  <p>Th lightness of a color can be described as how much light you want to give the clor, where 0% means no light (black), 50% means 50% light (neither dark nor light) 100% means full lightness (white).</p>
+
+  <h3>Examples</h3>
+  <h1 style="background-color:hsl(0,100%, 0%);" style="text-color:white;">hsl(0,100%,0%)</h1>
+  <h1 style="background-color:hsl(0,100%,25%);">hsl(0,100%,25%)</h1>
+  <h1 style="background-color:hsl(0,100%,50%);">hsl(0,100%,50%)</h1>
+  <h1 style="background-color:hsl(0,100%,75%);">hsl(0,100%,75%)</h1>
+  <h1 style="background-color:hsl(0,100%,90%);">hsl(0,100%,90%)</h1>
+  <h1 style="background-color:hsl(0,100%,100%);">hsl(0,100%,100%)</h1>
+
+  <p>With HSL colors, 0% lightness means black, and 100 lightness means white.</p>
+
+  <p>Shades of gray are often defined by setting the hue and saturantion to 0, and adjust the lightness from 0% to 100% to get darker/lighter shades:</p>
+
+  <h3>Examples</h3>
+  <h1 style="background-color:hsl(0,0%,0%);">hsl(0,0%,0%)</h1>
+  <h1 style="background-color:hsl(0,0%,24%);">hsl(0,0%,24%)</h1>
+  <h1 style="background-color:hsl(0,0%,47%);">hsl(0,0%,47%)</h1>
+  <h1 style="background-color:hsl(0,0%,71%);">hsl(0,0%,71%)</h1>
+  <h1 style="background-color:hsl(0,0%,94%);">hsl(0,0%,94%)</h1>
+  <h1 style="background-color:hsl(0,0%,100%);">hsl(0,0%,100%)</h1>
+  <hr>
   </body>
 
 </html>
