Exemplo de uso de valores de cores HSLA
Especificação de valores de cores para exibir níveis de sua 
transparência no parâmetro "background-color".

--- a/WebContent/w3school/colors.html
+++ b/WebContent/w3school/colors.html
@@ -146,6 +146,34 @@
   <h1 style="background-color:hsl(0,0%,94%);">hsl(0,0%,94%)</h1>
   <h1 style="background-color:hsl(0,0%,100%);">hsl(0,0%,100%)</h1>
   <hr>
+
+  <h3>RGBA Value</h3>
+  <p>RGBA color values are an extension of RGBA color values with an alpha channel - wich specifies the opacity for a color.</p>
+  <p>RGBA color value: <b>rgba(red, green, blue, alpha)</b>.
+
+  <h3>Examples</h3>
+
+  <h1 style="background-color:rgba(255,99,71,0);">rgba(255,99,71,0)</h1>
+  <h1 style="background-color:rgba(255,99,71,0.2);">rgba(255,99,71,0.2)</h1>
+  <h1 style="background-color:rgba(255,99,71,0.4);">rgba(255,99,71,0.4)</h1>
+  <h1 style="background-color:rgba(255,99,71,0.6);">rgba(255,99,71,0.6)</h1>
+  <h1 style="background-color:rgba(255,99,71,0.8);">rgba(255,99,71,0.8)</h1>
+  <h1 style="background-color:rgba(255,99,71,1);">rgba(255,99,71,1)</h1>
+  <hr>
+
+  <h3>HSLA Value</h3>
+  <p>HSLA color values are an extension of HSL color values with an alpha channel - which specifies the opacity for a color.</p>
+  <p>HSL color values:<b>hsla(hue, saturation, lightness, alpha)</b></p>
+
+  <h1 style="background-color:hsl(9,100%,64%, 0);">hsl(9,100%,64%, 0)</h1>
+  <h1 style="background-color:hsl(9,100%,64%, 0.2);">hsl(9,100%,64%,0.2)</h1>
+  <h1 style="background-color:hsl(9,100%,64%, 0.4);">hsl(9,100%,64%,0.4)</h1>
+  <h1 style="background-color:hsl(9,100%,64%,0.6);">hsl(9,100%,64%,0.6)</h1>
+  <h1 style="background-color:hsl(9,100%,64%,0.8);">hsl(9,100%,64%,0.8)</h1>
+  <h1 style="background-color:hsl(9,100%,64%,1);">hsl(9,100%,64%,1)</h1>
+  <p>You can make transparent colors by using the HSLA color value.</p>
+  <hr>
+
   </body>
 
 </html>
