Introdução ao CSS
Apresentação das partes CSS usadas em HTML: interna, externa e inline

--- a/WebContent/w3school/index.html
+++ b/WebContent/w3school/index.html
@@ -23,6 +23,7 @@
       <li><a href="quotation.html"> HTML Quotation and Citation Elements</a></li>
       <li><a href="comments.html">Comments</a></li>
       <li><a href="colors.html">Colors</a></li>
+      <li><a href="css_styles_colors.html">Styling HTML with CSS</a></li>
       <hr>
       <li><a href="learning_list.html">Conteúdo de Aprendizado</a></li>
     </ul>
