--- a/WebContent/w3school/learning_list.html
+++ b/WebContent/w3school/learning_list.html
@@ -33,6 +33,7 @@
         <li><a href="https://www.w3schools.com/html/html_quotation_elements.asp">HTML Elements</a></li><br>
         <li><a href="https://www.w3schools.com/html/html_comments.asp">HTML Comments</a></li><br>
         <li><a href="https://www.w3schools.com/html/html_colors.asp">HTML Colors</a></li><br>
+        <li><a href="https://www.w3schools.com/html/html_css.asp">Styling HTML with CSS</a></li><br>
         <li><a href="#">VAZIO</a></li><br>
     </ol>
 
