Exemplos de css
Inclusão de links para exemplos de uso de configurações css 
(interno/externo) e criação de diretório para organizar arquivos futuros

--- a/WebContent/w3school/css_styles_colors.html
+++ b/WebContent/w3school/css_styles_colors.html
@@ -23,10 +23,32 @@
     <p>CSS can be added to HTML elements in 3 ways:</p>
     <ul>
       <li><b>Inline</b> - by using the style attribute in HTML elements.</li>
-      <li><b>Internal</b> - by using a < style > element in the < head > section.</li>
+      <li><b>Internal</b> - by using a <b>style</b>  element in the <b>head</b> section.</li>
       <li><b>External</b> - by using external CSS file.</li>
     </ul>
 
-    <p>
+    <h3>Inline CSS</h3>
+    <p>An inline CSS is used to apply a unique style to a single HTML element.</p>
+    <p>An inline CSS uses the style attibrute of an HTML element.</p>
+    <h3>Examples</h3>
+    <h1 style="color:blue;">This is a Blue Heading</h1>
+    <hr>
+
+    <h3>Internal CSS</h3>
+    <p>An internal CSS is used to define a style for a single HTML page.</p>
+    <h3>Example</h3>
+    <li><a href="css/internal01.html">Internal CSS</a></li>
+    <hr>
+
+    <h3>External CSS</h3>
+    <p>An external syle sheet is used to define the style for many HTML pages.</p>
+    <p><b>With an external style sheed, you can change the look of an entire web site, by changing one file!</b></p>
+    <p>To use an external sytle sheet, add a link to it in the <b>head</b> section of the HTML page:</p>
+    <li><a href="css/external01.html">External CSS</a></li>
+
+    <p>An external style sheet can be written in any text editor. The file must not contain any HTML code, and must be saved with a .css extension.
+
+    <hr>
+
   </body>
 </html>
