Conteúdo de configuração CSS
Exemplos de formatação utilizando configurações CSS: bordas, class de 
atributos, fontes, id, magens de bordas, referências externas e estilos 
de cores.

--- a/WebContent/w3school/css_styles_colors.html
+++ b/WebContent/w3school/css_styles_colors.html
@@ -47,8 +47,20 @@
     <li><a href="css/external01.html">External CSS</a></li>
 
     <p>An external style sheet can be written in any text editor. The file must not contain any HTML code, and must be saved with a .css extension.
-
     <hr>
+
+    <h3>CSS Fonts</h3>
+    <p>The CSS <b style="color:red">color</b> property defines the text coor to be used.</p>
+    <p>The CSS <b style="color:red">font-family</b> property defines the font t be used.</p>
+    <p>The CSS <b style="color:red">font-size</b> property defines the text size to be used.</p>
+    <h3>Examples</h3>
+    <li><a href="css/fonts.html">CSS Fonts</a></li>
+    <li><a href="css/border.html">CSS Border</a></li>
+    <li><a href="css/padding.html">CSS Padding</a></li>
+    <li><a href="css/margin.html">CSS Margin</a></li>
+    <li><a href="css/id_attribute.html">The id Attribute</a></li>
+    <li><a href="css/class_attribute.html">The Class Attribute</a></li>
+    <li><a href="css/ref_external.html">External References</a></li>
 
   </body>
 </html>
