Inclusão de conteúdo ao index - Links e Hyperlinks
Adição de referências aos conteúdos vistos no site W3School do 
aprendizado de HTML

--- a/WebContent/w3school/learning_list.html
+++ b/WebContent/w3school/learning_list.html
@@ -6,14 +6,14 @@
     <style>
       h3 {
         text-align:center;
-        color:LightGreen;
+        color:DarkOrange;
       }
       a {
         color:green;
       }
     </style>
   </head>
-  <body style="Background-color:gray;">
+  <body style="Background-color:LightSteelBlue;">
 
     <img src="w3schools.png" alt="W3Schools.com" wdth="104" height="142">
     <a href="index.html">Página Principal</a>
@@ -34,6 +34,7 @@
         <li><a href="https://www.w3schools.com/html/html_comments.asp">HTML Comments</a></li><br>
         <li><a href="https://www.w3schools.com/html/html_colors.asp">HTML Colors</a></li><br>
         <li><a href="https://www.w3schools.com/html/html_css.asp">Styling HTML with CSS</a></li><br>
+        <li><a href="https://www.w3schools.com/html/html_links.asp">HTML Links - Hyperlinks</a></li><br>
         <li><a href="#">VAZIO</a></li><br>
     </ol>
 
