--- a/WebContent/w3school/index.html
+++ b/WebContent/w3school/index.html
@@ -24,6 +24,7 @@
       <li><a href="comments.html">Comments</a></li>
       <li><a href="colors.html">Colors</a></li>
       <li><a href="css_styles_colors.html">Styling HTML with CSS</a></li>
+      <li><a href="links.html">HTML Links - Hyperlinks</a></li>
       <hr>
       <li><a href="learning_list.html">Conteúdo de Aprendizado</a></li>
     </ul>
