Correção de referência à página principal

--- a/WebContent/w3school/links/local.html
+++ b/WebContent/w3school/links/local.html
@@ -12,7 +12,7 @@
   <body>
     <img src="../w3schools.png" alt="W3Schools.com" wdth="104" height="142">
     <br/>
-    <a href="index.html">Page Master</a>
+    <a href="../index.html">Page Master</a>
     <br/>
     <a href="../links.html">HTML Links - Hyperlinks</a>
 
