Correção de referência à página principal

--- a/WebContent/w3school/links/syntax.html
+++ b/WebContent/w3school/links/syntax.html
@@ -15,14 +15,14 @@
   <body>
     <img src="../w3schools.png" alt="W3Schools.com" wdth="104" height="142">
     <br/>
-    <a href="index.html">Página Principal</a>
+    <a href="../index.html">Página Principal</a>
     <br/>
     <a href="../links.html">HTML Links - Hyperlinks</a>
 
     <h2 style="text-align:center;">HTML Links</h2>
     <p><a href="https://www.w3schools.com/html/">Visit our HTML Tutorial</a></p>
     <hr>
-    
+
     <p>
   </body>
 </html>
