Uso de cores em links (html)

--- a/WebContent/w3school/links.html
+++ b/WebContent/w3school/links.html
@@ -35,6 +35,18 @@
     <ul>
       <li><a href="links/local.html">Local Links</a></li>
     </ul>
+    <hr>
+
+    <h2>HTML Link Colors</h2>
+    <p>By default a link willappear like this (in all browsers);</p>
+    <ul>
+      <li>An unvisited link is underlined and blue</li>
+      <li>A visited link is underlined and purple</li>
+      <li>An active link is underlined and red.</li>
+    </ul>
+
+    <p>You can change the default colors, by using css.</p>
+    
 
   </body>
 </html>
