Configuração de cores em links
Uso de cores em status de links.

--- a/WebContent/w3school/links.html
+++ b/WebContent/w3school/links.html
@@ -46,7 +46,10 @@
     </ul>
 
     <p>You can change the default colors, by using css.</p>
-    
+    <h3>Example Link Colors</h3>
+    <ul>
+      <li><a href="links/link-colors.html">HTML Link Colors</a></li>
+    </ul>
 
   </body>
 </html>
