Link color buttons
Configuração de cores de links em botões.

--- a/WebContent/w3school/links.html
+++ b/WebContent/w3school/links.html
@@ -49,7 +49,10 @@
     <h3>Example Link Colors</h3>
     <ul>
       <li><a href="links/link-colors.html">HTML Link Colors</a></li>
+      <li><a href="links/link-colors1.html">HTML Link Color Buttons</a></li>
     </ul>
+
+
 
   </body>
 </html>
