Correção na indicação via link para página anterior

--- a/WebContent/w3school/links/link-colors1.html
+++ b/WebContent/w3school/links/link-colors1.html
@@ -5,8 +5,8 @@
     <title></title>
     <style>
       a:link, a:visited {
-        background-color:#f44336;
-        color: white;
+        background-color:gray;
+        color: LightGreen;
         padding: 15px 25px;
         text-align: center;
         text-decoration: none;
@@ -18,6 +18,10 @@
     </style>
   </head>
   <body>
+    <img src="../w3schools.png" alt="W3Schools.com" wdth="104" height="142">
+    <br/>
+    <p><a href="../index.html">Page Master</a></p>
+    <a href="../links.html">HTML Links - Hyperlinks</a>
 
     <h2>Link Button</h2>
     <p>A link styled as a button:</p>
