Exemplo de atributo de destino top
Exibição de documento vinculado no corpo inteiro da janela.

--- a/WebContent/w3school/links.html
+++ b/WebContent/w3school/links.html
@@ -21,6 +21,9 @@
       body {
         background-color: DarkSeaGreen;
       }
+      b {
+        color: FireBrick;
+      }
     </style>
   </head>
   <body>
@@ -83,7 +86,7 @@
     </ul>
 
     <h3>Example 1 - The target</h3>
-    <a id="mya" href="links/target1.html" target="_blank">Target Attribute</a>
+    <a id="mya" href="links/target1.html" target="_self">Target Attribute</a>
 
   </body>
 </html>
