--- a/WebContent/w3school/links/target1.html
+++ b/WebContent/w3school/links/target1.html
@@ -32,8 +32,11 @@
     <a href="../links.html">HTML Links - Hyperlinks</a>
 
     <h2 id="myHeader">The target Attribute</h2>
-    <p>
-    <a id="mya" href="https://www.w3schools.com/html/" target="_blank">Visit our HTML Tutorial</a>
-    </p>
+    <a href="https://www.w3schools.com/html/" target="_blank">Visit our HTML Tutorial!</a>
+    <p>If you set the target attribute to "_blank", the link will open in a new browser sindow or tab.</p>
+
+    <hr>
+    <p>Opens the linked document in the full body of the window.</p>
+    <p>Locked in a frame?<a href="https://www.w3schools.co/html/" target="top">Click Here!</a></p>
   </body>
 </html>
