--- a/WebContent/w3school/links/target1.html
+++ b/WebContent/w3school/links/target1.html
@@ -28,8 +28,8 @@
   </head>
   <body>
     <img src="../w3schools.png" alt="W3Schools.com" wdth="104" height="142">
-    <p><a href="../index.html">Página Principal</a></p>
-    <a href="../links.html">HTML Links - Hyperlinks</a>
+    <p><a id="mya" href="../index.html">Página Principal</a></p>
+    <a id="mya" href="../links.html">HTML Links - Hyperlinks</a>
 
     <h2 id="myHeader">The target Attribute</h2>
     <a href="https://www.w3schools.com/html/" target="_blank">Visit our HTML Tutorial!</a>
@@ -38,5 +38,6 @@
     <hr>
     <p>Opens the linked document in the full body of the window.</p>
     <p>Locked in a frame?<a href="https://www.w3schools.co/html/" target="top">Click Here!</a></p>
+
   </body>
 </html>
