Texto ajuda em link
Configuração de informação extra sobre um elemento, exibidas como texto 
de ajuda ao posicionar o mouse sobre ele.

--- a/WebContent/w3school/links.html
+++ b/WebContent/w3school/links.html
@@ -96,5 +96,12 @@
     <a id="mya" href="links/link-image.html">HTML Links - Image as Link</a>
 
     <p style="background-color:DarkKhaki; border: 20px solid DarkKhaki;"><b>Note:</b><b id="myB"> border:0;</b> is added to prevent IE9 (and earlier) from displaying from displaying a border around the image (when the image is a link).</p>
+    <hr>
+
+    <h2>Link Titles</h2>
+    <p>The <b id="myB">title</b> attribute specifies extra information about an element. The information is most often shown as a tooltip text when the mouse moves over the element.</p>
+
+    <h3>Example 1 - Link Titles</h3>
+    <a id="mya" href="links/link-titles.html">Link Titles</a>
   </body>
 </html>
