--- a/WebContent/w3school/links.html
+++ b/WebContent/w3school/links.html
@@ -103,5 +103,15 @@
 
     <h3>Example 1 - Link Titles</h3>
     <a id="mya" href="links/link-titles.html">Link Titles</a>
+    <hr>
+
+    <h2>Links HTML - Crie um marcador</h2>
+    <p>HTML bookmarks are used to allow readers to jump to specific oparts of a Web page.</p>
+    <p>Bookmarks can be useful if your webpage is very long.</p>
+    <p>To make a bookmark, you must first create the bookmark, and then add a link to it.</p>
+    <p>When the link is clicked, the page will scroll to the location with the bookmark.</p>
+
+    <h3>Example 1 - Bookmark</h3>
+    <a id="mya" href="links/link-bookmark.html" title="Exemplo de marcador">Create a Bookmarck</a>
   </body>
 </html>
