Configurações iniciais básicas à página "Images"
Inclusão de imagem a ser usada pelo projeto e formatações padrão da tags 
para css e layout.

--- a/WebContent/w3school/index.html
+++ b/WebContent/w3school/index.html
@@ -103,7 +103,7 @@
           <li><a id="mya"href="colors.html">Colors</a></li><br>
           <li><a id="mya"href="css_styles_colors.html">Styling HTML with CSS</a></li><br>
           <li><a id="mya"href="links.html">HTML Links - Hyperlinks</a></li><br>
-          <li><a id="mya"href="imagens.html">HTML Imagens</a></li><br>
+          <li><a id="mya"href="images.html">HTML Imagens</a></li><br>
           <li><a id="mya"href="learning_list.html">Conteúdo de Aprendizado</a></li><br>
         </ul>
       </nav>
