Tentativa adição imagem em diretório externo

--- a/WebContent/w3school/images.html
+++ b/WebContent/w3school/images.html
@@ -25,12 +25,13 @@
   </head>
   <body>
     <img src="w3schools.png" alt="W3Schools.com" wdth="104" height="142">
-    <p><a id="mya" href="../index.html" title="Retornar à página inicial">Página Principal</a></p>
+    <p><a id="mya" href="index.html" title="Retornar à página inicial">Página Principal</a></p>
 
     <h2 id="myHeader">HTML Images</h2>
 
     <p>Images can improve the design and the appearance of a web page.</p>
-    
+    <h3>Example 1 HTML Images</h3>
+    <img src="/img/pic_trulli.jpg" alt="Trulli" width="500" height="333">
 
   </body>
 </html>
