Alinhamento de imagens e botões de ação.

--- a/WebContent/w3school/images.html
+++ b/WebContent/w3school/images.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <meta name="viewport" content="width=device-width,initial-scale" charset="utf-8">
     <title></title>
     <style>
@@ -24,14 +26,20 @@
     </style>
   </head>
   <body>
-    <img src="w3schools.png" alt="W3Schools.com" wdth="104" height="142">
-    <p><a id="mya" href="index.html" title="Retornar à página inicial">Página Principal</a></p>
+    <div align="center"><img src="w3schools.png" alt="W3Schools.com" wdth="104" height="142" align="center"></div>
+    <div align="center" class="row">
+      <a id="mya" href="index.html" title="Retornar à página inicial">Página Principal</a>
 
+      <a id="mya" href="pictures.hmlt" title="HTML Images">HTML Images</a>
+    </div>
     <h2 id="myHeader">HTML Images</h2>
 
     <p>Images can improve the design and the appearance of a web page.</p>
     <h3>Example 1 HTML Images</h3>
-    <img src="/img/pic_trulli.jpg" alt="Trulli" width="500" height="333">
-
+    <div class="row">
+    <img src="img/pic_trulli.jpg" alt="Girl" width="500" height="333">
+    <img src="img/img_chania.jpg" alt="Flowers in Chania">
+    <img src="img/img_girl.jpg" alt="Girl in a Jacket">
+  </div>
   </body>
 </html>
