Customização de cabeçalho
Organização de itens de cabeçalho em página (picture.html) de conteúdo 
de aprendizado sobre atributos de tags de imagens.

--- a/WebContent/w3school/images/picture.html
+++ b/WebContent/w3school/images/picture.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="pt" dir="ltr">
   <head>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -26,19 +26,14 @@
     </style>
   </head>
   <body>
-    <div align="center"><img src="w3schools.png" alt="W3Schools.com" wdth="104" height="142" align="center"></div>
+    <div align="center"><img src="../w3schools.png" alt="W3Schools.com" wdth="104" height="142" align="center"></div>
     <div align="center" class="row">
-      <a id="mya" href="index.html" title="Retornar à página inicial">Página Principal</a>
-      <a id="mya" href="images/picture.html" title="HTML Images">HTML Images</a>
+      <a class="waves-effect waves-light btn-large" href="../index.html"><i class="material-icons left">home</i>Página Principal</a>
+      <a class="waves-effect waves-light btn-large" href="../images.html"><i class="material-icons left">filter</i>HTML Images</a>
     </div>
-    <h2 id="myHeader">HTML Images</h2>
 
-    <p>Images can improve the design and the appearance of a web page.</p>
-    <h3>Example 1 HTML Images</h3>
-    <div class="row">
-    <img src="img/pic_trulli.jpg" alt="Girl" width="500" height="333">
-    <img src="img/img_chania.jpg" alt="Flowers in Chania">
-    <img src="img/img_girl.jpg" alt="Girl in a Jacket">
-  </div>
+    <h2 id="myHeader">HTML Imagens</h2>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </body>
 </html>
