--- a/WebContent/w3school/images/picture.html
+++ b/WebContent/w3school/images/picture.html
@@ -29,10 +29,11 @@
     <div align="center"><img src="../w3schools.png" alt="W3Schools.com" wdth="104" height="142" align="center"></div>
     <div align="center" class="row">
       <a class="waves-effect waves-light btn-large" href="../index.html"><i class="material-icons left">home</i>Página Principal</a>
-      <a class="waves-effect waves-light btn-large" href="../images.html"><i class="material-icons left">filter</i>HTML Images</a>
+      <a class="waves-effect waves-light btn-large" href="../images.html"><i class="material-icons right">filter</i>Index HTML Images</a>
     </div>
 
     <h2 id="myHeader">HTML Imagens</h2>
+    
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </body>
