--- a/WebContent/w3school/index.html
+++ b/WebContent/w3school/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=">
+  <head><link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+
+  <meta name="viewport" content="width=device-width,initial-scale" charset="utf-8">
+
     <style>
     #myHeader {
       background-color: SeaGreen;
@@ -87,8 +90,12 @@
 
     <section>
       <nav>
+        <div clas="row">
+
+        </div>
+
         <ul>
-          <li><a id="mya" href="Use_Image.html">The src Attribute</a></li><br>
+          <li><a href="Use_Image.html" class="waves-effect waves-light btn-large" title="Atribtuto 'src'"><i class="material-icons left">home</i>The src Attribute</a></li>
           <li><a id="mya" href="alt_attribute.html">The alt Attribute</a></li><br>
           <li><a id="mya" href="size_attribute.html">Size Attribute</a></li><br>
           <li><a id="mya" href="style_attribute.html">Style Attribute</a></li><br>
@@ -118,6 +125,6 @@
     <footer>
       <p>by douglasgp</p>
     </footer>
-
+    <script type="text/javascript" src="js/materialize.min.js"></script>
   </body>
 </html>
